<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="movie_synopsis">Synopsis :</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_duration">Duration</string>
    <string name="movie_release">Release :</string>
    <string name="movie_rate">Rate :</string>
    <string name="dummy_duration">1h 10m</string>
    <string name="dummy_genre">ACTION, FANTASY, ADVENTURE</string>
    <string name="dummy_rate">7/10</string>
    <string name="dummy_release">April 25, 2018</string>

    <array name="data_movie_image">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string-array name="data_movie_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a DeadPool</item>
        <item>How To Train Your Dragon</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Marry Popins Returns</item>
    </string-array>

    <string-array name="data_movie_year">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 22, 2018</item>
    </string-array>

    <string-array name="data_movie_rate">
        <item>7.5/10</item>
        <item>6.8/10</item>
        <item>8.0/10</item>
        <item>7.0/10</item>
        <item>8.1/10</item>
        <item>6.5/10</item>
        <item>6.7/10</item>
        <item>6.9/10</item>
        <item>7.6/10</item>
        <item>7.4/10</item>
        <item>6.5/10</item>
        <item>6.3/10</item>
        <item>8.5/10</item>
    </string-array>

    <string-array name="data_movie_synopsis">
        <item>Seasoned musician Jackson Maine discovers \— and falls in love with \— struggling artist Ally.
            She has just about given up on her dream to make it big as a singer \— until Jack coaxes her into the spotlight.
            But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm.
            With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world.
            Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos.
            A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality.
            Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970.
            Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control,
            Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>Decades after her original visit, the magical nanny returns to help the Banks siblings and Michael\'s children through a difficult time in their lives.</item>
    </string-array>

    <string-array name="data_movie_genre">
        <item>DRAMA, ROMANCE, MUSIC</item>
        <item>ACTION, ADVENTURE, FANTASY</item>
        <item>ADVENTURE, ACTION, FANTASY</item>
        <item>THRILLER, DRAMA</item>
        <item>DRAMA, MUSIC</item>
        <item>ACTION, ADVENTURE, SCIENCE FICTION</item>
        <item>DRAMA</item>
        <item>COMEDY, ACTION</item>
        <item>ANIMATION, FAMILY, ADVENTURE</item>
        <item>ACTION, ANIMATION, FANTASY, ADVENTURE, COMEDY, SCIENCE FICTION</item>
        <item>THRILLER, MYSTERY, DRAMA</item>
        <item>ACTION, THRILLER</item>
        <item>ADVENTURE, FANTASY, COMEDY</item>
    </string-array>

    <string-array name="data_movie_duration">
        <item>2h 15m</item>
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 10m</item>
    </string-array>
</resources>
