<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity"
    android:id="@+id/scrol_view">
    <RelativeLayout
        android:id="@+id/rltv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detail_movie"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            tools:src="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_detail_movie"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:id="@+id/lin_layout"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_title"
                    style="@style/TextContent.Title"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/movie_release" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/movie_rate"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/tv_detail_year"
                        style="@style/TextValue"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_detail_rate"
                        android:layout_weight="4"
                        style="@style/TextValue"/>

                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin">
                        <TextView
                            style="@style/TextField"
                            android:layout_marginRight="25dp"
                            android:text="@string/movie_genre"/>

                        <TextView
                            style="@style/TextValue"
                            android:id="@+id/tv_detail_genre"
                            tools:text="@string/dummy_genre"/>
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <TextView
                            style="@style/TextField"
                            android:layout_marginRight="10dp"
                            android:text="@string/movie_duration"/>

                        <TextView
                            style="@style/TextValue"
                            android:id="@+id/tv_detail_duration"
                            android:text="@string/dummy_duration"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        <TextView
            style="@style/TextField.Synopsis"
            android:text="@string/movie_synopsis"
            tools:text="@string/movie_synopsis" />

        <TextView
            style="@style/TextValue.Synopsis"
            android:id="@+id/tv_detail_synopsis"/>
    </RelativeLayout>
</ScrollView>